<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewmodel"
                type="com.pixelart.notedock.viewModel.settings.ChangePasswordViewModel" />
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="#E6FFFFFF"
                    android:elevation="8dp"
                    app:menu="@menu/folder_view_menu"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:onBackClicked="@{() -> viewmodel.onBackPressed()}"
                    app:title="@string/changePassword"
                    app:titleTextColor="@color/colorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textViewCurrentPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_your_current_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.03"
                        app:layout_constraintTop_toTopOf="parent" />

                <EditText
                        android:id="@+id/editTextCurrentPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:hint="@string/current_password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.03"
                        app:layout_constraintTop_toBottomOf="@id/textViewCurrentPassword"/>

                <TextView
                        android:id="@+id/textViewNewPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_your_new_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.05"
                        app:layout_constraintTop_toBottomOf="@id/editTextCurrentPassword" />

                <EditText
                        android:id="@+id/editTextNewPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:hint="@string/new_password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.05"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNewPassword" />

                <EditText
                        android:id="@+id/editTextConfirmNewPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:hint="@string/confirm_new_password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.05"
                        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />



            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>


    </FrameLayout>
</layout>

