<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewmodel"
                type="com.pixelart.notedock.viewModel.authentication.RegisterFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

        <EditText
                android:id="@+id/editTextEmailRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/email"
                android:text="@={viewmodel.email}"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewEmail"
                app:layout_constraintVertical_bias="0.01" />

        <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEmailRegister"
                app:layout_constraintVertical_bias="0.05" />

        <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPassword"
                app:layout_constraintVertical_bias="0.01" />

        <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/passwordConfirm"
                android:inputType="textPassword"
                android:text="@={viewmodel.confirmPassword}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                app:layout_constraintVertical_bias="0.01" />

        <Button
                android:id="@+id/buttonRegister"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:text="@string/register"
                android:enabled="@{viewmodel.registerEnabled}"
                android:background="@{viewmodel.registerEnabled ? @drawable/main_button : @drawable/main_button_disabled}"
                style="@style/buttonStyle"
                app:onThrottledClick="@{() -> viewmodel.registerButtonPressed()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="#000"
                android:textSize="16sp"
                onThrottledClick="@{() -> viewmodel.alreadyHaveAccount()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.9" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3000"
                android:clickable="true"
                android:focusable="true"
                android:elevation="8dp"
                app:visibleOrGone="@{viewmodel.loading}">

            <ProgressBar
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>