<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewmodel"
                type="com.pixelart.notedock.viewModel.authentication.ResetPasswordFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginStart="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05"
                app:layout_constraintHorizontal_bias="0"/>

        <EditText
                android:id="@id/editTextEmail"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:inputType="textEmailAddress"
                app:onDone="@{() -> viewmodel.recoverAccountPressed()}"
                android:text="@={viewmodel.email}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
                app:layout_constraintVertical_bias="0.01"/>

        <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/recover_account_message"
                android:textColor="#d3d3d3"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                app:layout_constraintVertical_bias="0.015" />

        <Button

                android:id="@+id/button"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@{viewmodel.recoverEnabled ? @drawable/main_button : @drawable/main_button_disabled}"
                android:enabled="@{viewmodel.recoverEnabled}"
                android:text="@string/recover_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
                app:layout_constraintVertical_bias="0.1"
                app:onThrottledClick="@{() -> viewmodel.recoverAccountPressed()}" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_back_to_login"
                android:textColor="#000"
                android:textSize="16sp"
                app:onThrottledClick="@{() -> viewmodel.goBackToLogin()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3000"
                android:clickable="true"
                android:focusable="true"
                android:elevation="8dp"
                app:visibleOrGone="@{viewmodel.loading}">

            <ProgressBar
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>