<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewmodel"
                type="com.pixelart.notedock.viewModel.settings.ChangeEmailViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#E6FFFFFF"
                android:elevation="8dp"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:onBackClicked="@{() -> viewmodel.onBackPressed()}"
                app:title="@string/change_email"
                app:titleTextColor="@color/colorPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#3000"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="8dp"
                    app:visibleOrGone="@{viewmodel.loading}">

                <ProgressBar
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="17dp"
                    android:hint="@string/new_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.05"
                    >

                <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.email}"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="17dp"
                    android:hint="@string/password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputEmail"
                    app:layout_constraintVertical_bias="0.05"
                    app:passwordToggleEnabled="true">

                <EditText
                        android:id="@id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.password}"
                        onDone="@{() -> viewmodel.changeEmailClick()}"
                        android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/textViewEmailMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_email_message"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword"
                    app:layout_constraintVertical_bias="0.064" />

            <Button
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:text="@string/change_email"
                    style="@style/ButtonStyle"
                    android:enabled="@{viewmodel.changeEmailEnabled}"
                    android:background="@{viewmodel.changeEmailEnabled ? @drawable/main_button : @drawable/main_button_disabled}"
                    onThrottledClick="@{() -> viewmodel.changeEmailClick()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEmailMessage"
                    app:layout_constraintVertical_bias="0.1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>